dnl $Id$
dnl
dnl $Log: configure.in,v $
dnl Revision 1.2  2003/11/17 16:19:27  mat
dnl Added id and log to configure.in
dnl
dnl


AC_INIT(rtspproxy/rtspproxy.cpp)

AM_CONFIG_HEADER(config.h)

AC_CANONICAL_SYSTEM
AC_ARG_PROGRAM
AC_PROG_CC
AC_PROG_CXX
AC_PROG_RANLIB

AM_INIT_AUTOMAKE(rtspproxy, 2.3)

dnl Checks for programs.
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

case $host_os in
	linux*)
		cxx_define="-Wall -g3 -D_UNIX -D_LINUX -D_GNU_SOURCE -D_REENTRANT"
	;;
	darwin*)
		cxx_define="-Wall -g3 -D_UNIX -D_BSD -D_GNU_SOURCE -D_REENTRANT"

	dnl Other sytem can be added here.. with the relatives defines
esac

AC_SUBST(cxx_define)

AC_OUTPUT(
Makefile
cache_manager/Makefile
cache_play/Makefile
cache_prefetching/Makefile
config/Makefile
libapp/Makefile
librtsp/Makefile
rtp/Makefile
reflector/Makefile
rtspproxy/Makefile
)

echo "
 Type 'make' to build.

 "



