
AM_CXXFLAGS = $(cxx_define) $(debug)

noinst_LIBRARIES = libapp.a

libapp_a_SOURCES= app.cpp bitset.cpp dbg.cpp file.cpp md5.c parser.cpp  \
		resolver.cpp sock.cpp str.cpp stream.cpp thread.cpp   \
		timer.cpp types.cpp url.cpp valmap.cpp       \
		variant.cpp 					\
		Avl.h app.h bitset.h dbg.h file.h md5.h parser.h      \
		resolver.h sock.h str.h stream.h theap.h thread.h     \
		timer.h tlist.h ttree.h tvec.h types.h url.h    \
		valmap.h variant.h
	
INCLUDES = -I$(top_srcdir)/config


