
# $Id$

AM_CXXFLAGS = $(cxx_define) $(debug)
AM_CFLAGS = $(cxx_define) $(debug)

noinst_LIBRARIES = libcache_play.a

libcache_play_a_SOURCES = cache_play.cpp cache_transport.cpp transport_tcp.cpp \
			  transport_rtp.cpp\
		          cache_play.h cache_transport.h transport_tcp.h \
			  transport_rtp.h



