
#
# $Id$
#
# $URL$
#

noinst_LIBRARIES = liblib.a

liblib_a_SOURCES = Mutex.cpp Thread.cpp Log.cpp Socket.cpp SocketTCP.cpp \
		Timer.cpp Stream.cpp \
		include/Mutex.h include/Thread.h include/Log.h include/mtypes.h \
		include/Socket.h include/Timeout.h include/SocketTCP.h \
		include/Timer.h include/Stream.h



