
#
# $Id$
#
# $URL$
#

noinst_LIBRARIES = liblib.a

liblib_a_SOURCES = Mutex.cpp Thread.cpp Log.cpp \
		Timer.cpp Stream.cpp String.cpp HostAddress.cpp \
		include/Mutex.h include/Thread.h include/Log.h include/mtypes.h \
		include/Timeout.h  HostAddress.h \
		include/Timer.h include/Stream.h include/String.h


